# volumetric_viewpoint_planner

./: .gitignore  README.md
.devcontainer/: Dockerfile  post-create.sh
.devcontainer/cuda-opengl/: devcontainer.json
src/moveit2_commander_recorder/: .gitignore  CMakeLists.txt  README.md  package.xml
src/moveit2_commander_recorder/config/: parameters.yaml
src/moveit2_commander_recorder/launch/: moveit_commander.launch.py
src/moveit2_commander_recorder/src/: pose_commander.cpp
src/viewpoint_generator/: README.md  package.xml  setup.cfg  setup.py
src/viewpoint_generator/config/: params.yaml
src/viewpoint_generator/config/RViz/: lattices.rviz
src/viewpoint_generator/launch/: lattice_publisher.launch.py
src/viewpoint_generator/viewpoint_generator/: sampling_surface.py
