<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit2_commander_recorder</name>
  <version>0.0.0</version>
  <description>Moveit2-based next pose command for a robot arm</description>
  <maintainer email="yilmazabdurrah@itu.edu.tr">ayilmaz</maintainer>
  <author email="yilmazabdurrah@itu.edu.tr">ayilmaz</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>image_view</depend>
  <depend>graph_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
